--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
 		"clean:all": "rimraf .svelte-kit node_modules"
 	},
 	"devDependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
+		"autoprefixer": "^10.4.13",
+		"daisyui": "^2.50.0",
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.21",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
 		"rimraf": "^3.0.2",
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.1",
+		"svelte-fa": "^3.0.3",
 		"svelte-preprocess": "^5.0.0",
+		"tailwindcss": "^3.2.6",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
