--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/debug": "^4.1.7",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
 		"daisyui": "^2.50.0",
+		"debug": "^4.3.4",
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
