--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -1,11 +1,18 @@
-on: push
-name: Node Code Formatter
+name: Formatter
+
+on: [push]
+
 jobs:
-  lint:
-    name: Node Code Formatter
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Node Code Formatter
-      uses: MarvinJWendt/run-node-formatter@stable
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '19.6.0'
+      - name: Install dependencies
+        run: npm ci
+      - name: Format
+        run: npm run format
+      - name: Lint
+        run: npm run lint
