--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.8.7",
 		"@supabase/supabase-js": "^2.2.3",
-		"supabase": "^1.38.0"
+		"supabase": "^1.38.0",
+		"zod": "^3.20.6"
 	}
 }
