--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "concurrently \"npm run dev:css\" \"vite dev\"",
+		"dev:css": "tailwindcss -w -i ./src/tailwind.css -o static/app.css",
 		"build": "vite build",
+		"build:css": "tailwindcss -m -i ./src/tailwind.css -o static/app.css",
 		"preview": "vite preview",
+    "test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"clean:all": "rimraf .svelte-kit node_modules"
+		"clean:all": "rimraf .svelte-kit node_modules",
+    "gensupatypes": "npx supabase gen types typescript --project-id dpwbrlitiquzbuztzwnj --schema public > src/lib/schema.ts"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.4.4",
 		"@commitlint/config-conventional": "^17.4.4",
+		"@faker-js/faker": "^7.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@playwright/test": "^1.31.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.8.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -23,6 +29,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
+		"concurrently": "^7.6.0",
 		"daisyui": "^2.50.0",
 		"debug": "^4.3.4",
 		"eslint": "^8.31.0",
@@ -30,6 +37,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"husky": "^8.0.3",
 		"postcss": "^8.4.21",
+		"postgres": "^3.3.3",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
 		"rimraf": "^3.0.2",
