--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
 		"build": "vite build",
 		"build:css": "tailwindcss -m -i ./src/tailwind.css -o static/app.css",
 		"preview": "vite preview",
-    "test": "playwright test",
+		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"clean:all": "rimraf .svelte-kit node_modules",
-    "gensupatypes": "npx supabase gen types typescript --project-id dpwbrlitiquzbuztzwnj --schema public > src/lib/schema.ts"
+		"gensupatypes": "npx supabase gen types typescript --project-id dpwbrlitiquzbuztzwnj --schema public > src/lib/schema.ts"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.4.4",
@@ -26,6 +26,7 @@
 		"@sveltejs/kit": "^1.8.3",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/debug": "^4.1.7",
+		"@types/tcp-port-used": "^1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
@@ -46,6 +47,7 @@
 		"svelte-fa": "^3.0.3",
 		"svelte-preprocess": "^5.0.0",
 		"tailwindcss": "^3.2.6",
+		"tcp-port-used": "^1.0.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
