--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "concurrently \"npm run dev:css\" \"vite dev\"",
-		"dev:css": "tailwindcss -w -i ./src/tailwind.css -o static/app.css",
-		"build": "vite build",
-		"build:css": "tailwindcss -m -i ./src/tailwind.css -o static/app.css",
+		"dev:css": "tailwindcss -w -i ./src/app.postcss -o static/app.css",
+		"build": "npm run build:css && vite build",
+		"build:css": "tailwindcss -m -i ./src/app.postcss -o static/app.css",
 		"preview": "vite preview",
 		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"clean:all": "rimraf .svelte-kit node_modules",
@@ -21,7 +21,7 @@
 		"@commitlint/config-conventional": "^17.4.4",
 		"@faker-js/faker": "^7.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
-		"@playwright/test": "^1.31.1",
+		"@playwright/test": "^1.31.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.8.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -32,7 +32,7 @@
 		"autoprefixer": "^10.4.13",
 		"concurrently": "^7.6.0",
 		"daisyui": "^2.50.0",
-		"debug": "^4.3.4",
+		"dotenv": "^16.0.3",
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
